// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importBeerXML when importing Caribou Slobber when calculating should calculate a recipe 1`] = `
Object {
  "abv": 4.6283821587888685,
  "abw": 3.6069055308113365,
  "agingDays": 14,
  "agingTemp": 20,
  "author": "Northern Brewer",
  "batchSize": 18.9270589,
  "boilSize": 9.46352945,
  "bottlingPressure": 0,
  "bottlingTemp": 0,
  "buToGu": 0,
  "bv": 0,
  "calories": 161.1013703869811,
  "color": 25.095933163768834,
  "description": "Recipe description",
  "est_abv": 4.8,
  "est_color": 25.1,
  "est_fg": 1.014,
  "est_og": 1.051,
  "fermentables": Array [
    Object {
      "color": 27,
      "late": false,
      "name": "Amber",
      "type": "Grain",
      "weight": 2.72155422,
      "yield": 69.57,
    },
    Object {
      "color": 10,
      "late": false,
      "name": "Dry Malt Extract - Amber",
      "type": "Dry Extract",
      "weight": 0.45359237,
      "yield": 91.3,
    },
    Object {
      "color": 80,
      "late": false,
      "name": "Caramel / Crystal 80L",
      "type": "Grain",
      "weight": 0.1133980925,
      "yield": 71.74,
    },
    Object {
      "color": 207,
      "late": false,
      "name": "Pale Chocolate",
      "type": "Grain",
      "weight": 0.1133980925,
      "yield": 71.74,
    },
    Object {
      "color": 500,
      "late": false,
      "name": "Black Malt",
      "type": "Grain",
      "weight": 0.05669904625,
      "yield": 60.87,
    },
  ],
  "fg": 1.013728215005601,
  "fgPlato": 3.5053978536678585,
  "ibu": 0,
  "ibuMethod": "tinseth",
  "kegPressure": 12.274489749999999,
  "kegTemp": 4.444444444444445,
  "mash": Object {
    "grainTemp": 20,
    "name": "Mash Steps",
    "notes": "",
    "ph": null,
    "spargeTemp": 76,
    "steps": Array [],
  },
  "mashEfficiency": 100,
  "name": "Caribou Slobber",
  "notes": "",
  "og": 1.0490293393057184,
  "ogPlato": 12.157042445478055,
  "price": 22.214087203952005,
  "primaryDays": 14,
  "primaryTemp": 20,
  "primingCornSugar": 0.12961975028595002,
  "primingDme": 0.17271702105852554,
  "primingHoney": 0.15877900931027733,
  "primingSugar": 0.11794749177270022,
  "realExtract": 5.069615195867142,
  "secondaryDays": 0,
  "secondaryTemp": 0,
  "servingSize": 0.355,
  "spices": Array [
    Object {
      "aa": 4.5,
      "form": "Pellet",
      "name": "Goldings",
      "time": "60",
      "use": "First Wort",
      "weight": 0.0283495231,
    },
    Object {
      "aa": 4,
      "form": "Pellet",
      "name": "Liberty",
      "time": "45",
      "use": "First Wort",
      "weight": 0.0283495231,
    },
    Object {
      "aa": 4,
      "form": "Pellet",
      "name": "Williamette",
      "time": "15",
      "use": "First Wort",
      "weight": 0.0283495231,
    },
  ],
  "steepEfficiency": 50,
  "steepTime": 20,
  "style": Object {
    "abv": Array [
      4.3,
      6.2,
    ],
    "carb": Array [
      1,
      4,
    ],
    "category": "American Ale",
    "color": Array [
      18,
      35,
    ],
    "fg": Array [
      1.01,
      1.016,
    ],
    "ibu": Array [
      20,
      40,
    ],
    "name": "American Brown Ale",
    "og": Array [
      1.045,
      1.06,
    ],
  },
  "tertiaryDays": 0,
  "tertiaryTemp": 0,
  "timelineMap": Object {
    "drySpice": Object {},
    "fermentables": Object {
      "boil": Array [
        Object {
          "fermentable": Object {
            "color": 27,
            "late": false,
            "name": "Amber",
            "type": "Grain",
            "weight": 2.72155422,
            "yield": 69.57,
          },
          "gravity": 38.581327388158584,
        },
        Object {
          "fermentable": Object {
            "color": 10,
            "late": false,
            "name": "Dry Malt Extract - Amber",
            "type": "Dry Extract",
            "weight": 0.45359237,
            "yield": 91.3,
          },
          "gravity": 8.438683317854629,
        },
      ],
      "boilEnd": Array [],
      "mash": Array [],
      "steep": Array [
        Object {
          "fermentable": Object {
            "color": 80,
            "late": false,
            "name": "Caramel / Crystal 80L",
            "type": "Grain",
            "weight": 0.1133980925,
            "yield": 71.74,
          },
          "gravity": 0.8288487694727424,
        },
        Object {
          "fermentable": Object {
            "color": 207,
            "late": false,
            "name": "Pale Chocolate",
            "type": "Grain",
            "weight": 0.1133980925,
            "yield": 71.74,
          },
          "gravity": 0.8288487694727424,
        },
        Object {
          "fermentable": Object {
            "color": 500,
            "late": false,
            "name": "Black Malt",
            "type": "Grain",
            "weight": 0.05669904625,
            "yield": 60.87,
          },
          "gravity": 0.35163106075972844,
        },
      ],
    },
    "times": Object {},
    "yeast": Array [
      Object {
        "attenuation": 72,
        "form": "Dry",
        "name": "Windsor Ale Yeast",
        "type": "Ale",
      },
    ],
  },
  "type": "Extract",
  "yeast": Array [
    Object {
      "attenuation": 72,
      "form": "Dry",
      "name": "Windsor Ale Yeast",
      "type": "Ale",
    },
  ],
}
`;

exports[`importBeerXML when importing Caribou Slobber when generating timelines when bottling when using imperial units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 2,
    "instructions": "Heat 0.3gal to 154.4°F (about 2 minutes). You may want to use a small, clean, and sanitized pot for steeping.",
    "phase": "steep",
    "time": 0,
  },
  Object {
    "duration": 20,
    "instructions": "Add 0.11kg of Caramel / Crystal 80L (0.8 GU), 0.11kg of Pale Chocolate (0.8 GU), 0.06kg of Black Malt (0.4 GU) and steep for 20 minutes.",
    "phase": "steep",
    "time": 2,
  },
  Object {
    "duration": 24,
    "instructions": "Top up the wort with water to 2.5gal and heat to a rolling boil (about 24 minutes).",
    "phase": "top-up",
    "time": 22,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 68°F and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 46,
  },
  Object {
    "duration": 20160,
    "instructions": "Pitch Windsor Ale Yeast and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 66,
  },
  Object {
    "duration": 0,
    "instructions": "Prime and bottle about 53 bottles.",
    "phase": "bottle",
    "time": 20226,
  },
  Object {
    "duration": 20160,
    "instructions": "Age at 68°F for 14 days.",
    "phase": "aging",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 40386,
  },
]
`;

exports[`importBeerXML when importing Caribou Slobber when generating timelines when bottling when using metric units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 2,
    "instructions": "Heat 1.1l to 68°C (about 2 minutes). You may want to use a small, clean, and sanitized pot for steeping.",
    "phase": "steep",
    "time": 0,
  },
  Object {
    "duration": 20,
    "instructions": "Add 0.11kg of Caramel / Crystal 80L (0.8 GU), 0.11kg of Pale Chocolate (0.8 GU), 0.06kg of Black Malt (0.4 GU) and steep for 20 minutes.",
    "phase": "steep",
    "time": 2,
  },
  Object {
    "duration": 24,
    "instructions": "Top up the wort with water to 9.5l and heat to a rolling boil (about 24 minutes).",
    "phase": "top-up",
    "time": 22,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 20.0°C and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 46,
  },
  Object {
    "duration": 20160,
    "instructions": "Pitch Windsor Ale Yeast and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 66,
  },
  Object {
    "duration": 0,
    "instructions": "Prime and bottle about 53 bottles.",
    "phase": "bottle",
    "time": 20226,
  },
  Object {
    "duration": 20160,
    "instructions": "Age at 20.0°C for 14 days.",
    "phase": "aging",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 40386,
  },
]
`;

exports[`importBeerXML when importing Caribou Slobber when generating timelines when kegging when using imperial units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 2,
    "instructions": "Heat 0.3gal to 154.4°F (about 2 minutes). You may want to use a small, clean, and sanitized pot for steeping.",
    "phase": "steep",
    "time": 0,
  },
  Object {
    "duration": 20,
    "instructions": "Add 0.11kg of Caramel / Crystal 80L (0.8 GU), 0.11kg of Pale Chocolate (0.8 GU), 0.06kg of Black Malt (0.4 GU) and steep for 20 minutes.",
    "phase": "steep",
    "time": 2,
  },
  Object {
    "duration": 24,
    "instructions": "Top up the wort with water to 2.5gal and heat to a rolling boil (about 24 minutes).",
    "phase": "top-up",
    "time": 22,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 68°F and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 46,
  },
  Object {
    "duration": 20160,
    "instructions": "Pitch Windsor Ale Yeast and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 66,
  },
  Object {
    "duration": 0,
    "instructions": "Depressurize the keg by pulling the release valve for a few seconds.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Disassemble, clean, and sanitize the keg. Then reassemble.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Siphon your beer into the keg. Avoid splashing.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Seal the keg.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Attach the gas line to the CO2 bottle and the keg's in port.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Open the valves and check for gas leaks by sponging soapy water on all the connection points.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "With the psi low, pull the release valve for a few seconds to displace the oxygen.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 10080,
    "instructions": "Set the psi to 12 and store at 40°F for 7 days.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Test the pour and if the beer is still too flat, store for 2 more days.",
    "phase": "keg",
    "time": 30306,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 30306,
  },
]
`;

exports[`importBeerXML when importing Caribou Slobber when generating timelines when kegging when using metric units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 2,
    "instructions": "Heat 1.1l to 68°C (about 2 minutes). You may want to use a small, clean, and sanitized pot for steeping.",
    "phase": "steep",
    "time": 0,
  },
  Object {
    "duration": 20,
    "instructions": "Add 0.11kg of Caramel / Crystal 80L (0.8 GU), 0.11kg of Pale Chocolate (0.8 GU), 0.06kg of Black Malt (0.4 GU) and steep for 20 minutes.",
    "phase": "steep",
    "time": 2,
  },
  Object {
    "duration": 24,
    "instructions": "Top up the wort with water to 9.5l and heat to a rolling boil (about 24 minutes).",
    "phase": "top-up",
    "time": 22,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 20.0°C and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 46,
  },
  Object {
    "duration": 20160,
    "instructions": "Pitch Windsor Ale Yeast and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 66,
  },
  Object {
    "duration": 0,
    "instructions": "Depressurize the keg by pulling the release valve for a few seconds.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Disassemble, clean, and sanitize the keg. Then reassemble.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Siphon your beer into the keg. Avoid splashing.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Seal the keg.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Attach the gas line to the CO2 bottle and the keg's in port.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Open the valves and check for gas leaks by sponging soapy water on all the connection points.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "With the psi low, pull the release valve for a few seconds to displace the oxygen.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 10080,
    "instructions": "Set the psi to 12 and store at 4.4°C for 7 days.",
    "phase": "keg",
    "time": 20226,
  },
  Object {
    "duration": 0,
    "instructions": "Test the pour and if the beer is still too flat, store for 2 more days.",
    "phase": "keg",
    "time": 30306,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 30306,
  },
]
`;

exports[`importBeerXML when importing Kama Citra when calculating should calculate a recipe 1`] = `
Object {
  "abv": 5.097362862206204,
  "abw": 3.9870928594281723,
  "agingDays": 14,
  "agingTemp": 20,
  "author": "Northern Brewer",
  "batchSize": 20.81976479,
  "boilSize": 25.551529515,
  "bottlingPressure": 0,
  "bottlingTemp": 0,
  "buToGu": 0.9223645432456868,
  "bv": 2.1197691312742037,
  "calories": 158.59020887455665,
  "color": 7.347788550235134,
  "description": "Recipe description",
  "est_abv": 5.31,
  "est_color": 7.35,
  "est_fg": 1.01,
  "est_og": 1.05,
  "fermentables": Array [
    Object {
      "color": 1.8,
      "late": false,
      "name": "Pale 2-Row",
      "type": "Grain",
      "weight": 4.08233133,
      "yield": 80.43,
    },
    Object {
      "color": 40,
      "late": false,
      "name": "Caramel / Crystal 40L",
      "type": "Grain",
      "weight": 0.45359237,
      "yield": 73.91,
    },
  ],
  "fg": 1.009988180139963,
  "fgPlato": 2.557773468734382,
  "ibu": 44.94021079342771,
  "ibuMethod": "tinseth",
  "kegPressure": 12.274489749999999,
  "kegTemp": 4.444444444444445,
  "mash": Object {
    "grainTemp": 20,
    "name": "Mash Steps",
    "notes": "",
    "ph": null,
    "spargeTemp": 76,
    "steps": Array [
      Object {
        "endTemp": null,
        "name": "Strike temp=163.6F",
        "rampTime": null,
        "temp": 66.666666666667,
        "time": 60,
        "type": "Infusion",
        "waterRatio": 3.12952666950725,
      },
    ],
  },
  "mashEfficiency": 75,
  "name": "Kama Citra Session IPA",
  "notes": "",
  "og": 1.0487228299510394,
  "ogPlato": 12.084144347463138,
  "price": 48.373396866788006,
  "primaryDays": 14,
  "primaryTemp": 18.333333333333,
  "primingCornSugar": 0.12961975028595002,
  "primingDme": 0.17271702105852554,
  "primingHoney": 0.15877900931027733,
  "primingSugar": 0.11794749177270022,
  "realExtract": 4.280141323608541,
  "secondaryDays": 0,
  "secondaryTemp": 0,
  "servingSize": 0.355,
  "spices": Array [
    Object {
      "aa": 9,
      "form": "Pellet",
      "name": "Centennial",
      "time": "60",
      "use": "Boil",
      "weight": 0.021262142325,
    },
    Object {
      "aa": 6.5,
      "form": "Pellet",
      "name": "Cascade",
      "time": "20",
      "use": "Boil",
      "weight": 0.0283495231,
    },
    Object {
      "aa": 6.5,
      "form": "Pellet",
      "name": "Cascade",
      "time": "10",
      "use": "Boil",
      "weight": 0.0283495231,
    },
    Object {
      "aa": 14.2,
      "form": "Pellet",
      "name": "Citra",
      "time": "0",
      "use": "Boil",
      "weight": 0.0566990462,
    },
    Object {
      "aa": 14.2,
      "form": "Pellet",
      "name": "Citra",
      "time": "7200",
      "use": "Dry Hop",
      "weight": 0.0283495231,
    },
    Object {
      "aa": 6.5,
      "form": "Pellet",
      "name": "Cascade",
      "time": "7200",
      "use": "Dry Hop",
      "weight": 0.0283495231,
    },
    Object {
      "aa": 9,
      "form": "Pellet",
      "name": "Centennial",
      "time": "0",
      "use": "Boil",
      "weight": 0.007087380775,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Whirlfloc",
      "time": "10",
      "use": "Boil",
      "weight": 1,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Gypsum",
      "time": "",
      "use": "Other",
      "weight": 0.006,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Calcium Chloride",
      "time": "",
      "use": "Other",
      "weight": 0.002,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Table Salt",
      "time": "",
      "use": "Other",
      "weight": 0.001,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Epsom Salt",
      "time": "",
      "use": "Other",
      "weight": 0.002,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Lactic Acid",
      "time": "",
      "use": "Mash",
      "weight": 0.00211,
    },
    Object {
      "aa": 0,
      "form": "pellet",
      "name": "Fermax",
      "time": "10",
      "use": "Boil",
      "weight": 0.00246446,
    },
  ],
  "steepEfficiency": 50,
  "steepTime": 20,
  "style": Object {
    "abv": Array [
      5.5,
      7.5,
    ],
    "carb": Array [
      1,
      4,
    ],
    "category": "India Pale Ale (IPA)",
    "color": Array [
      6,
      15,
    ],
    "fg": Array [
      1.01,
      1.018,
    ],
    "ibu": Array [
      40,
      70,
    ],
    "name": "American IPA",
    "og": Array [
      1.056,
      1.075,
    ],
  },
  "tertiaryDays": 0,
  "tertiaryTemp": 0,
  "timelineMap": Object {
    "drySpice": Object {
      "7200": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 14.2,
            "form": "Pellet",
            "name": "Citra",
            "time": "7200",
            "use": "Dry Hop",
            "weight": 0.0283495231,
          },
        },
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 6.5,
            "form": "Pellet",
            "name": "Cascade",
            "time": "7200",
            "use": "Dry Hop",
            "weight": 0.0283495231,
          },
        },
      ],
    },
    "fermentables": Object {
      "boil": Array [],
      "boilEnd": Array [],
      "mash": Array [
        Object {
          "fermentable": Object {
            "color": 1.8,
            "late": false,
            "name": "Pale 2-Row",
            "type": "Grain",
            "weight": 4.08233133,
            "yield": 80.43,
          },
          "gravity": 45.617666732764825,
        },
        Object {
          "fermentable": Object {
            "color": 40,
            "late": false,
            "name": "Caramel / Crystal 40L",
            "type": "Grain",
            "weight": 0.45359237,
            "yield": 73.91,
          },
          "gravity": 3.105163218274597,
        },
        Object {
          "fermentable": Object {
            "color": null,
            "name": "Lactic Acid",
            "type": "Grain",
            "weight": 0.00211,
            "yield": null,
          },
          "gravity": 0,
        },
      ],
      "steep": Array [],
    },
    "times": Object {
      "0": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 14.2,
            "form": "Pellet",
            "name": "Citra",
            "time": "0",
            "use": "Boil",
            "weight": 0.0566990462,
          },
        },
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 9,
            "form": "Pellet",
            "name": "Centennial",
            "time": "0",
            "use": "Boil",
            "weight": 0.007087380775,
          },
        },
      ],
      "10": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 6.5,
            "form": "Pellet",
            "name": "Cascade",
            "time": "10",
            "use": "Boil",
            "weight": 0.0283495231,
          },
        },
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 0,
            "form": "pellet",
            "name": "Whirlfloc",
            "time": "10",
            "use": "Boil",
            "weight": 1,
          },
        },
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 0,
            "form": "pellet",
            "name": "Fermax",
            "time": "10",
            "use": "Boil",
            "weight": 0.00246446,
          },
        },
      ],
      "20": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 6.5,
            "form": "Pellet",
            "name": "Cascade",
            "time": "20",
            "use": "Boil",
            "weight": 0.0283495231,
          },
        },
      ],
      "60": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 9,
            "form": "Pellet",
            "name": "Centennial",
            "time": "60",
            "use": "Boil",
            "weight": 0.021262142325,
          },
        },
      ],
    },
    "yeast": Array [
      Object {
        "attenuation": 79.5,
        "form": "Liquid",
        "name": "San Diego Super Yeast WLP090",
        "type": "Ale",
      },
    ],
  },
  "type": "All Grain",
  "yeast": Array [
    Object {
      "attenuation": 79.5,
      "form": "Liquid",
      "name": "San Diego Super Yeast WLP090",
      "type": "Ale",
    },
  ],
}
`;

exports[`importBeerXML when importing Kama Citra when generating timelines when bottling when using imperial units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 0,
    "instructions": "Begin Mash Steps mash. Add 4.08kg of Pale 2-Row (45.6 GU), 0.45kg of Caramel / Crystal 40L (3.1 GU), 2.11g of Lactic Acid (0.0 GU).",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 25,
    "instructions": "Heat 15.0qts to 163°F (about 25 minutes)",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 60,
    "instructions": "Strike temp=163.6F: Infuse 15.0qt for 60 minutes at 152°F.",
    "phase": "mash",
    "time": 25,
  },
  Object {
    "duration": 5,
    "instructions": "Remove grains from mash. This is now your wort.",
    "phase": "mash",
    "time": 85,
  },
  Object {
    "duration": 50,
    "instructions": "Top up the wort with water to 6.7gal and heat to a rolling boil (about 50 minutes).",
    "phase": "top-up",
    "time": 90,
  },
  Object {
    "duration": 40,
    "instructions": "Add 21g of Centennial",
    "phase": "boil",
    "time": 140,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade",
    "phase": "boil",
    "time": 180,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade, 1000g of Whirlfloc, 2g of Fermax",
    "phase": "boil",
    "time": 190,
  },
  Object {
    "duration": 0,
    "instructions": "Add 57g of Citra, 7g of Centennial",
    "phase": "boil",
    "time": 200,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 65°F and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 200,
  },
  Object {
    "duration": 12960,
    "instructions": "Pitch San Diego Super Yeast WLP090 and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 220,
  },
  Object {
    "duration": 7200,
    "instructions": "Dry Hop 28g of Citra, 28g of Cascade",
    "phase": "dry hop",
    "time": 13180,
  },
  Object {
    "duration": 0,
    "instructions": "Prime and bottle about 58 bottles.",
    "phase": "bottle",
    "time": 20380,
  },
  Object {
    "duration": 20160,
    "instructions": "Age at 68°F for 14 days.",
    "phase": "aging",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 40540,
  },
]
`;

exports[`importBeerXML when importing Kama Citra when generating timelines when bottling when using metric units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 0,
    "instructions": "Begin Mash Steps mash. Add 4.08kg of Pale 2-Row (45.6 GU), 0.45kg of Caramel / Crystal 40L (3.1 GU), 2.11g of Lactic Acid (0.0 GU).",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 25,
    "instructions": "Heat 14.2l to 73°C (about 25 minutes)",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 60,
    "instructions": "Strike temp=163.6F: Infuse 14.2l for 60 minutes at 66.7°C.",
    "phase": "mash",
    "time": 25,
  },
  Object {
    "duration": 5,
    "instructions": "Remove grains from mash. This is now your wort.",
    "phase": "mash",
    "time": 85,
  },
  Object {
    "duration": 50,
    "instructions": "Top up the wort with water to 25.6l and heat to a rolling boil (about 50 minutes).",
    "phase": "top-up",
    "time": 90,
  },
  Object {
    "duration": 40,
    "instructions": "Add 21g of Centennial",
    "phase": "boil",
    "time": 140,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade",
    "phase": "boil",
    "time": 180,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade, 1000g of Whirlfloc, 2g of Fermax",
    "phase": "boil",
    "time": 190,
  },
  Object {
    "duration": 0,
    "instructions": "Add 57g of Citra, 7g of Centennial",
    "phase": "boil",
    "time": 200,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 18.3°C and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 200,
  },
  Object {
    "duration": 12960,
    "instructions": "Pitch San Diego Super Yeast WLP090 and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 220,
  },
  Object {
    "duration": 7200,
    "instructions": "Dry Hop 28g of Citra, 28g of Cascade",
    "phase": "dry hop",
    "time": 13180,
  },
  Object {
    "duration": 0,
    "instructions": "Prime and bottle about 58 bottles.",
    "phase": "bottle",
    "time": 20380,
  },
  Object {
    "duration": 20160,
    "instructions": "Age at 20.0°C for 14 days.",
    "phase": "aging",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 40540,
  },
]
`;

exports[`importBeerXML when importing Kama Citra when generating timelines when kegging when using imperial units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 0,
    "instructions": "Begin Mash Steps mash. Add 4.08kg of Pale 2-Row (45.6 GU), 0.45kg of Caramel / Crystal 40L (3.1 GU), 2.11g of Lactic Acid (0.0 GU).",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 25,
    "instructions": "Heat 15.0qts to 163°F (about 25 minutes)",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 60,
    "instructions": "Strike temp=163.6F: Infuse 15.0qt for 60 minutes at 152°F.",
    "phase": "mash",
    "time": 25,
  },
  Object {
    "duration": 5,
    "instructions": "Remove grains from mash. This is now your wort.",
    "phase": "mash",
    "time": 85,
  },
  Object {
    "duration": 50,
    "instructions": "Top up the wort with water to 6.7gal and heat to a rolling boil (about 50 minutes).",
    "phase": "top-up",
    "time": 90,
  },
  Object {
    "duration": 40,
    "instructions": "Add 21g of Centennial",
    "phase": "boil",
    "time": 140,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade",
    "phase": "boil",
    "time": 180,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade, 1000g of Whirlfloc, 2g of Fermax",
    "phase": "boil",
    "time": 190,
  },
  Object {
    "duration": 0,
    "instructions": "Add 57g of Citra, 7g of Centennial",
    "phase": "boil",
    "time": 200,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 65°F and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 200,
  },
  Object {
    "duration": 12960,
    "instructions": "Pitch San Diego Super Yeast WLP090 and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 220,
  },
  Object {
    "duration": 7200,
    "instructions": "Dry Hop 28g of Citra, 28g of Cascade",
    "phase": "dry hop",
    "time": 13180,
  },
  Object {
    "duration": 0,
    "instructions": "Depressurize the keg by pulling the release valve for a few seconds.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Disassemble, clean, and sanitize the keg. Then reassemble.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Siphon your beer into the keg. Avoid splashing.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Seal the keg.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Attach the gas line to the CO2 bottle and the keg's in port.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Open the valves and check for gas leaks by sponging soapy water on all the connection points.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "With the psi low, pull the release valve for a few seconds to displace the oxygen.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 10080,
    "instructions": "Set the psi to 12 and store at 40°F for 7 days.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Test the pour and if the beer is still too flat, store for 2 more days.",
    "phase": "keg",
    "time": 30460,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 30460,
  },
]
`;

exports[`importBeerXML when importing Kama Citra when generating timelines when kegging when using metric units should generate a recipe timeline 1`] = `
Array [
  Object {
    "duration": 0,
    "instructions": "Begin Mash Steps mash. Add 4.08kg of Pale 2-Row (45.6 GU), 0.45kg of Caramel / Crystal 40L (3.1 GU), 2.11g of Lactic Acid (0.0 GU).",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 25,
    "instructions": "Heat 14.2l to 73°C (about 25 minutes)",
    "phase": "mash",
    "time": 0,
  },
  Object {
    "duration": 60,
    "instructions": "Strike temp=163.6F: Infuse 14.2l for 60 minutes at 66.7°C.",
    "phase": "mash",
    "time": 25,
  },
  Object {
    "duration": 5,
    "instructions": "Remove grains from mash. This is now your wort.",
    "phase": "mash",
    "time": 85,
  },
  Object {
    "duration": 50,
    "instructions": "Top up the wort with water to 25.6l and heat to a rolling boil (about 50 minutes).",
    "phase": "top-up",
    "time": 90,
  },
  Object {
    "duration": 40,
    "instructions": "Add 21g of Centennial",
    "phase": "boil",
    "time": 140,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade",
    "phase": "boil",
    "time": 180,
  },
  Object {
    "duration": 10,
    "instructions": "Add 28g of Cascade, 1000g of Whirlfloc, 2g of Fermax",
    "phase": "boil",
    "time": 190,
  },
  Object {
    "duration": 0,
    "instructions": "Add 57g of Citra, 7g of Centennial",
    "phase": "boil",
    "time": 200,
  },
  Object {
    "duration": 20,
    "instructions": "Flame out. Begin chilling to 18.3°C and aerate the cooled wort (about 20 minutes).",
    "phase": "chill",
    "time": 200,
  },
  Object {
    "duration": 12960,
    "instructions": "Pitch San Diego Super Yeast WLP090 and seal the fermenter. You should see bubbles in the airlock within 24 hours.",
    "phase": "yeast",
    "time": 220,
  },
  Object {
    "duration": 7200,
    "instructions": "Dry Hop 28g of Citra, 28g of Cascade",
    "phase": "dry hop",
    "time": 13180,
  },
  Object {
    "duration": 0,
    "instructions": "Depressurize the keg by pulling the release valve for a few seconds.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Disassemble, clean, and sanitize the keg. Then reassemble.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Siphon your beer into the keg. Avoid splashing.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Seal the keg.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Attach the gas line to the CO2 bottle and the keg's in port.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Open the valves and check for gas leaks by sponging soapy water on all the connection points.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "With the psi low, pull the release valve for a few seconds to displace the oxygen.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 10080,
    "instructions": "Set the psi to 12 and store at 4.4°C for 7 days.",
    "phase": "keg",
    "time": 20380,
  },
  Object {
    "duration": 0,
    "instructions": "Test the pour and if the beer is still too flat, store for 2 more days.",
    "phase": "keg",
    "time": 30460,
  },
  Object {
    "duration": 0,
    "instructions": "Relax, don't worry and have a homebrew!",
    "phase": "drink",
    "time": 30460,
  },
]
`;
